fixed height of content section
fix the content section height so footer wont cover the text

--- a/Notes/CSS/Main.css
+++ b/Notes/CSS/Main.css
@@ -27,11 +27,12 @@
 }
 
 /*note*/
+
 .notes {
   display: flex;
   position: fixed;
   top: 100px;
-  height: 100%;
+  height: 81.5%;
 }
 
 .notes * {
